# mctoast

./: LICENSE.让我们说中文.md  README.md  build.cmd  mctoast.py  mctoast.ui  pyproject.toml  setup.py  system toast.psd  一般toast.psd
.github/workflows/: build.yml
demo/: test.py
mctoast/: __init__.py  __main__.py
